Fixed footer overlap.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -584,6 +584,9 @@ video {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
